improved the layout and styling of the RGB/HSV color picker panel added RGB/HSV color picker to the general fill picker hide popups when selection changes fixed layout issue with shadow props and other gridbox panels

--- a/Sketch/src/org/joshy/sketch/style.css
+++ b/Sketch/src/org/joshy/sketch/style.css
@@ -6,3 +6,8 @@
     border-width: 1px;
     border-color: black;
 }
+
+.rgbbox {
+    margin: 1px;
+    padding: 1px;
+}
